--- a/manuscripts/child-documents/discussion.Rmd
+++ b/manuscripts/child-documents/discussion.Rmd
@@ -1,8 +1,13 @@
 # Discussion
 
-In this study, we explored the feasibility of using EEG to study network variants. We tested for the presence of network variants by estimating how phase and amplitude coupling functional connectomes differ between and within individuals across different timescales using measures of network similarity, contrasting the magnitude of each of these effects across sessions and states at the group-level, and examining their consistency at the individual-level. Based on the findings of previous fMRI network variant studies, we expected to find effects consistent with functional connectomes that were more similar within than between individuals, with smaller variations in similarity related to session or state---consistent with the idea that functional networks are stable and trait-like with equal amounts of common and unique variance between individuals [@grattonetal_FunctionalBrainNetworks_2018].
+In this study, we explored the feasibility of using EEG to study network variants. We tested for the presence of network variants by estimating how phase and amplitude coupling functional connectomes differ between and within individuals across different timescales using measures of network similarity, contrasting the magnitude of each of these effects across sessions and states at the group-level, and examining their consistency at the individual-level. Based on the findings of previous fMRI network variant studies, 
 
-Overall, the group-level effect sizes most compatible with our data, given the background model, showed that both phase and amplitude coupling functional connectomes were more similar within than between individuals across timescales, with the strongest differences in similarity within and between individuals occurring for functional connectomes from the same session and state, and the weakest differences occurring for functional connectomes from the different sessions and states. However, in general, these effect sizes were at most small and not meaningful, or were practically nil in the case of delta, theta, beta, and gamma band amplitude coupling functional connectomes. In the few cases where effect sizes were considered meaningful, they were still at most small, and were not consistent with the larger differences reported in the fMRI literature [cf. @grattonetal_FunctionalBrainNetworks_2018]. Moreover, these cases were often unrepresentative of the variability seen at the individual-level, where the data did not resolve whether the most compatible effect sizes were positive or negative for a considerable portion of participants at most levels of the session and state predictors across timescales. Although a number of participants did have consistently positive effect sizes that were small and meaningful---or comparable to fMRI effect sizes in a handful of cases---we would not consider these results to be consistent with the stable and trait-like characterization of functional networks reported in the fMRI literature [cf. @grattonetal_FunctionalBrainNetworks_2018], given that trait-like functional networks would theoretically create consistent differences for all participants. Considered together, at most our findings provided weak supportive evidence for the presence of network variants in a subset of our sample for phase coupling functional connectomes in the theta, alpha, beta, and gamma bands, but did not generally demonstrate the feasibility of using EEG to study network variants given the inconsistencies observed across participants.
+we hypothesized that functional connectomes would be more similar within than between individuals, with smaller variations in similarity related to session or state
+
+
+we expected to find effects consistent with functional connectomes that were more similar within than between individuals, with smaller variations in similarity related to session or state---consistent with the idea that functional networks are stable and trait-like with equal amounts of common and unique variance between individuals [@grattonetal_FunctionalBrainNetworks_2018].
+
+Overall, the group-level effect sizes most compatible with our data, given the background model, showed that both phase and amplitude coupling functional connectomes were more similar within than between individuals across timescales, with the strongest differences in similarity within and between individuals occurring for functional connectomes from the same session and state, and the weakest differences occurring for functional connectomes from the different sessions and states. However, in general, these effect sizes were at most small, or were practically nil in the case of delta, theta, beta, and gamma band amplitude coupling functional connectomes, and were not consistent with the larger differences reported in the fMRI literature [cf. @grattonetal_FunctionalBrainNetworks_2018]. Moreover, these cases were often unrepresentative of the variability seen at the individual-level, where the data did not resolve whether the most compatible effect sizes were positive or negative for a considerable portion of participants at most levels of the session and state predictors across timescales. Although a number of participants did have consistently positive effect sizes---which were comparable to fMRI effect sizes in a handful of cases, but were otherwise at most small---we would not consider these results to be consistent with the stable and trait-like characterization of functional networks reported in the fMRI literature [cf. @grattonetal_FunctionalBrainNetworks_2018], given that trait-like functional networks would theoretically create consistent differences for all participants. Considered together, at most our findings provided weak supportive evidence for the presence of network variants in a subset of our sample for phase coupling functional connectomes in the theta, alpha, beta, and gamma bands, but did not generally demonstrate the feasibility of using EEG to study network variants given the inconsistencies observed across participants.
 
 ## Differences between phase and amplitude coupling
 
@@ -14,7 +19,7 @@ Another factor possibly contributing to the differences observed between the pha
 
 Consistent with previous EEG research on resting state networks [@samoginetal_FrequencyDependentFunctional_2020], we found that functional connectivity was strongest in the alpha band, which is likely due to the fact that alpha band oscillations are dominant during resting state <!--and are more strongly correlated with known resting state networks, such as the default-mode network-->[@mantinietal_ElectrophysiologicalSignaturesResting_2007; @marinoetal_HemodynamicCorrelatesElectrophysiological_2019]. Notably, the prominence of alpha band functional connectivity coincided with the strongest differences in functional connectome similarity within versus between individuals, which may indicate that EEG network variants are more sensitive to task state than fMRI network variants [cf. @grattonetal_FunctionalBrainNetworks_2018]. In support of this point, although we found that the relative strength of both within and between individual similarities generally shifted in the same direction at different timescales, the variability of these shifts was greater between than within individuals, indicating that functional connectomes became more differentiated between individuals as a function of timescale. The smaller changes we found within individuals were also consistent with previous EEG [@nentwichetal_FunctionalConnectivityEEG_2020], electrocorticography [ECoG\; @mostamesadaghiani_OscillationBasedConnectivityArchitecture_2021], and magnetoencephalography [MEG\; @colcloughetal_HowReliableAre_2016] research, which found that phase and amplitude coupling functional connectomes were generally stable within individuals, showing moderate to high similarity within and between sessions and states across timescales; with higher similarity for functional connectivity estimated with the orthogonalized amplitude envelope correlation than for the phase lag index as in @colcloughetal_HowReliableAre_2016.
 
-Our results are also conceptually consistent with a recent study by @nentwichetal_FunctionalConnectivityEEG_2020, who investigated the relationship between twelve phenotypic variables (age, sex, socioeconomic status, intelligence, and diagnostic assessments for sleep disturbance, behavioural and emotional problems, attention-deficit/hyperactivity disorder, anxiety, inattention, mood, internet addiction, distress tolerance) and phase coupling functional connectome similarities in a large sample of typically and atypically developing children and adolescents during resting in the delta, theta, alpha, and beta bands. They found that all twelve variables were unable to explain variation in functional connectome similarities between and among individuals in the delta, theta, alpha, and beta bands; with the exception of sex and age in the beta band. Although our study did not examine the relationship between any variables of interest and functional connectome similarity, the findings of @nentwichetal_FunctionalConnectivityEEG_2020 indicate---similar to our findings---that (1) functional connectomes may become more differentiated between individuals as a function timescale, given they only found phenotype-connectome relationships in the beta band; and (2) network variants may be harder to detect with EEG. Regarding the latter point, @nentwichetal_FunctionalConnectivityEEG_2020 also investigated the relationship between the aforementioned twelve variables and fMRI functional connectome similarities in the same sample. Here they found that four variables (age, sex, intelligence, and the assessment for behavioural and emotional problems) were able to explain variation in functional connectome similarities between and among individuals, suggesting that fMRI functional connectomes may better capture practically relevant information compared to EEG.
+Our results are also conceptually consistent with a recent study by @nentwichetal_FunctionalConnectivityEEG_2020, who investigated the relationship between twelve phenotypic variables (age, sex, socioeconomic status, intelligence, and diagnostic assessments for sleep disturbance, behavioural and emotional problems, attention-deficit/hyperactivity disorder, anxiety, inattention, mood, internet addiction, distress tolerance) and phase coupling functional connectome similarities in a large sample of typically and atypically developing children and adolescents during resting in the delta, theta, alpha, and beta bands. They found that all twelve variables were unable to explain variation in functional connectome similarities between and among individuals in the delta, theta, alpha, and beta bands; with the exception of sex and age in the beta band. Although our study did not examine the relationship between any variables of interest and functional connectome similarity, the findings of @nentwichetal_FunctionalConnectivityEEG_2020 indicate---similar to our findings---that (1) functional connectomes may become more differentiated between individuals as a function of frequency band, given they only found phenotype-connectome relationships in the beta band; and (2) network variants may be harder to detect with EEG. Regarding the latter point, @nentwichetal_FunctionalConnectivityEEG_2020 also investigated the relationship between the aforementioned twelve variables and fMRI functional connectome similarities in the same sample. Here they found that four variables (age, sex, intelligence, and the assessment for behavioural and emotional problems) were able to explain variation in functional connectome similarities between and among individuals, suggesting that fMRI functional connectomes may better capture practically relevant information compared to EEG.
 
 <!-- Less clear, however, is how our findings relate to previous EEG research demonstrating that resting state functional connectomes are unique to individuals and can be used to distinguish between them [@laroccaetal_HumanBrainDistinctiveness_2014].  -->
 
@@ -24,7 +29,7 @@ Our results are also conceptually consistent with a recent study by @nentwicheta
 
 Factors that could explain the differences between our findings and what has been reported in the fMRI literature are the spatial and temporal resolutions of the two modalities, and the methods used to estimate functional connectivity. 
 
-Network variants are likely sensitive to the spatial resolution of the neuroimaging system used to study them, as this influences the precision with which individual differences in functional connectivity can be measured. For EEG, the number of electrodes and distance between them determines spatial resolution, with higher electrode density corresponding to higher spatial resolution [@ferreeetal_SpatialResolutionScalp_2001; @robinsonetal_VeryHighDensity_2017; @ryynanenetal_EffectElectrodeDensity_2004; @ryynanenetal_EffectMeasurementNoise_2006]. With low electrode density, as in the 10-20 system, EEG typically has a spatial resolution of approximately 5 to 9 centimetres [@burleetal_SpatialTemporalResolutions_2015; @srinivasanetal_EstimatingSpatialNyquist_1998]. Higher density EEG systems can achieve a spatial resolution of up to 1 to 2 centimetres, but this still falls short of the spatial resolution of fMRI, which typically ranges from 500 microns to 4 millimetres [@glover_OverviewFunctionalMagnetic_2011]. Because EEG functional connectomes are naturally spatially blurrier than fMRI functional connectomes, network variants may be harder to detect or less pronounced in EEG, leading to smaller, less consistent, differences in functional connectome similarity within versus between individuals.[^3] Future work might address this possibility either by testing how individual differences in functional connectome similarity vary as a function of electrode density, or by using simultaneous EEG and fMRI [@mulert_SimultaneousEEGFMRI_2013] to compare the strength and consistency of network variants between the two modalities in the same sample.
+Network variants are likely sensitive to the spatial resolution of the neuroimaging system used to study them, as this influences the precision with which individual differences in functional connectivity can be measured. For EEG, the number of electrodes and distance between them determines spatial resolution, with higher electrode density corresponding to higher spatial resolution [@ferreeetal_SpatialResolutionScalp_2001; @robinsonetal_VeryHighDensity_2017; @ryynanenetal_EffectElectrodeDensity_2004; @ryynanenetal_EffectMeasurementNoise_2006]. With low electrode density, as in the 10-20 system, EEG typically has a spatial resolution of approximately 5 to 9 centimetres [@burleetal_SpatialTemporalResolutions_2015; @srinivasanetal_EstimatingSpatialNyquist_1998]. Higher density EEG systems can achieve a spatial resolution of up to 1 to 2 centimetres, but this still falls short of the spatial resolution of fMRI, which typically ranges from 500 microns to 4 millimetres [@glover_OverviewFunctionalMagnetic_2011]. Because EEG functional connectomes are naturally spatially blurrier than fMRI functional connectomes, network variants may be harder to detect or less pronounced in EEG, leading to smaller, less consistent, differences in functional connectome similarity within versus between individuals.[^7] Future work might address this possibility either by testing how individual differences in functional connectome similarity vary as a function of electrode density, or by using simultaneous EEG and fMRI [@mulert_SimultaneousEEGFMRI_2013] to compare the strength and consistency of network variants between the two modalities in the same sample.
 
 <!-- The ability to detect network variants may be more strongly associated with spatial resolution. Although EEG has sufficient spatial resolution for the purposes of person identification and recognition—colloquially referred to as functional connectome fingerprinting—it may not have adequate spatial resolution to detect differences in functional connectome similarity as large as with fMRI.  -->
 <!-- measures of electrophysiological connectivity show spatial similarity to the functional connectivity commonly observed with fMRI regardless of timescale [@danielarzate-menaetal_StationaryEEGPattern_2022; @sadaghianiwirsich_IntrinsicConnectomeOrganization_2020]. -->
@@ -56,9 +61,40 @@ First, it is unclear how our results might generalize to more diverse samples. I
 
 Second, we assumed that the connectivity structure in each frequency band was stationary over the length of the recording for both phase and amplitude coupling functional connectomes. Although neural oscillations are naturally non-stationary, varying from moment to moment [@faisaletal_NoiseNervousSystem_2008], stationary patterns of functional connectivity during resting state have been identified in EEG [e.g., @olguin-rodriguezetal_CharacteristicFluctuationsStable_2018], fMRI [e.g., @laumannetal_StabilityBOLDFMRI_2017], and simultaneous EEG-fMRI studies [e.g., @danielarzate-menaetal_StationaryEEGPattern_2022], with consistent positive or negative coupling occurring between sites or electrodes, even when averaging over multiple epochs. These stationary patterns are thought to be the substrate for effective brain function, permitting the adaptability and efficiency needed to optimize responses to our often unpredictable environment [@garrettetal_MomenttomomentBrainSignal_2013], and thus reflect neuropsychologically relevant signals of interest. However, we do note that approaches accounting for nonlinear dynamics may provide complimentary insights to those that focus on the stable aspects of network variants. For example, @vandevilleetal_WhenMakesYou_2021 found that fMRI functional connectomes exhibit short transient bursts of uniqueness even at short time windows, with different resting state networks becoming more or less unique between individuals as a function of time window length, suggesting that the dynamic aspects of network variants are worth exploring.
 
-Finally, we limited our investigation to within-frequency analyses of functional connectivity and network similarity. Although cross-frequency coupling is also considered to be a key mechanism by which the brain transmits and processes information, integrating functional systems across multiple spatiotemporal scales [@canoltyknight_FunctionalRoleCrossfrequency_2010], we did not explore for the presence of network variants in cross-frequency coupling functional connectomes given that most research on cross-frequency coupling focuses on coupling within brain regions or between a small number of regions of interest, rather than the entire connectome. Only a handful of studies have demonstrated that cross-frequency coupling also occurs in whole brain functional networks [@keiteletal_VisualCortexResponses_2017; @siebenhuhneretal_CrossfrequencySynchronizationConnects_2016; @palva_PhaseSynchronyNeuronal_2005; @vandermeijetal_PhaseAmplitudeCouplingHuman_2012], and the validity of these findings has recently come into question due to standard cross-frequency coupling analyses showing significant cross-frequency coupling in the absence of any underlying physiological coupling [@aruetal_UntanglingCrossfrequencyCoupling_2015]. Recently, however, @siebenhuhneretal_GenuineCrossfrequencyCoupling_2020 were able to demonstrate the presence of true cross-frequency coupling in whole brain functional networks---ruling out the influence of spurious coupling---in both a small sample of presurgical epilepsy patients during eyes-closed resting state using stereo-EEG, and a small sample of healthy controls during eyes-open resting state using magnetoencephalography. Moreover, they found that network strength was predictive of individual differences on several cognitive tasks in the healthy control sample (the other sample did not complete these tasks); thus, cross-frequency coupling may be a worthwhile avenue for future EEG network variant research if methods for estimating true cross-frequency coupling are validated, improved, and made more accessible [e.g., @idajietal_HarmoniMethodEliminating_2022].
+Third, we limited our investigation to within-frequency analyses of functional connectivity and network similarity. Although cross-frequency coupling is also considered to be a key mechanism by which the brain transmits and processes information, integrating functional systems across multiple spatiotemporal scales [@canoltyknight_FunctionalRoleCrossfrequency_2010], we did not explore for the presence of network variants in cross-frequency coupling functional connectomes given that most research on cross-frequency coupling focuses on coupling within brain regions or between a small number of regions of interest, rather than the entire connectome. Only a handful of studies have demonstrated that cross-frequency coupling also occurs in whole brain functional networks [@keiteletal_VisualCortexResponses_2017; @siebenhuhneretal_CrossfrequencySynchronizationConnects_2016; @palva_PhaseSynchronyNeuronal_2005; @vandermeijetal_PhaseAmplitudeCouplingHuman_2012], and the validity of these findings has recently come into question due to standard cross-frequency coupling analyses showing significant cross-frequency coupling in the absence of any underlying physiological coupling [@aruetal_UntanglingCrossfrequencyCoupling_2015]. Recently, however, @siebenhuhneretal_GenuineCrossfrequencyCoupling_2020 were able to demonstrate the presence of true cross-frequency coupling in whole brain functional networks---ruling out the influence of spurious coupling---in both a small sample of presurgical epilepsy patients during eyes-closed resting state using stereo-EEG, and a small sample of healthy controls during eyes-open resting state using magnetoencephalography. Moreover, they found that network strength was predictive of individual differences on several cognitive tasks in the healthy control sample (the other sample did not complete these tasks); thus, cross-frequency coupling may be a worthwhile avenue for future EEG network variant research if methods for estimating true cross-frequency coupling are validated, improved, and made more accessible [e.g., @idajietal_HarmoniMethodEliminating_2022].
 
-<!-- Third, our approach to testing for the presence of network variants was insensitive to the possibility that EEG network variants are not individually unique, but rather fall into clusters.  -->
+Finally, we note that our approach to estimating individual differences in functional connectome similarity within and between participants was somewhat insensitive to the possibility that EEG network variants are not individually unique, but rather fall into unique subgroups or clusters. This was due to our use of pairwise contrasts comparing the degree of similarity within versus between participants, which would necessarily lead to larger effect sizes in cases where a participant's functional connectomes were wholly unique versus cases where a participant's functional connectomes were similar to some participants but different from others. Thus, in some cases individual effect sizes may have been reduced as a consequence not of a group effect, but of a subgroup effect. Given this possibility, we emphasize the importance of evaluating outcome variability estimates in our sample in light of the patterns present in the similarity matrix those estimates were based on. One potential solution to control for possible subgroup effects in future studies using a pairwise contrast approach would be to add a *within subgroup* covariate to the model (denoting whether a pair came from the same or different subgroups), which could be derived from cluster analysis of functional connectome data [e.g., @tokudaetal_MultipleClusteringIdentifying_2021]. Additionally, using more diverse and/or larger samples may further reduce the likelihood of possible subgroup effects skewing individual effect sizes towards zero, and improve the precision of uncertainty estimates for individual-level sub-models, reducing the likelihood of the data not resolving whether the most compatible effect sizes for a given individual are positive or negative.
+
+<!--
+
+Add a limitation to the discussion about how differences in connectivity could be caused by actual differences in strength, or differences in topography of functional areas like kraus discuss for fMRI, but for EEG:
+
+>“Thus, typical estimates of fcMRI strength are not able to dissociate whether the observed results are due to individual differences in the spatial extent of brain networks or the degree of functional coupling between analogous regions.” ([Kraus et al., 2023, p. 11](zotero://select/library/items/VMKRITWL)) ([pdf](zotero://open-pdf/library/items/DRP597AH?page=11&annotation=VBNZ33YQ))
+
+<!-- For example, in a given individual, variation in connectivity strength may cause canonical network nodes to be partitioned out of a network they are typically associated with in group-averaged models or be incorporated into a different network when using community detection algorithms [@bijsterboschetal_ChallengesFutureDirections_2020; @dworetskyetal_ProbabilisticMappingHuman_2021; @gordonnelson_ThreeTypesIndividual_2021; @uddinetal_ControversiesProgressStandardization_2023]; variation in the size and position of network nodes may cause canonical network nodes to appear absent or disconnected when using standardized parcellation schemes due to localization errors [@chongetal_IndividualParcellationResting_2017; @dworetskyetal_TwoCommonDistinct_2021; @gordonetal_IndividualVariabilitySystemLevel_2017; @gordonnelson_ThreeTypesIndividual_2021; @uddinetal_ControversiesProgressStandardization_2023]; and variation in network topography may create distinct topological features (e.g., extra network nodes) that are not typically present in group-averaged models [@dworetskyetal_TwoCommonDistinct_2021; @kongetal_SpatialTopographyIndividualSpecific_2019; @glasseretal_MultimodalParcellationHuman_2016; @gordonnelson_ThreeTypesIndividual_2021; @laumannetal_FunctionalSystemAreal_2015; @seitzmanetal_TraitlikeVariantsHuman_2019; @uddinetal_ControversiesProgressStandardization_2023]. However, because each of these forms of variation can be present simultaneously, the effects of one form of variation can influence estimates of the others; thus making it unclear whether a deviation from the mean was driven by connectional, spatial, or topographical variation  [@gordonnelson_ThreeTypesIndividual_2021]. -->
+
+<!--
+>“Each of these forms of variation is important to consider when building or applying a taxonomy of large-scale brain networks, and emphasizes the value of employing individual-level network definitions. In a given individual, variation in functional connectivity strength may result in a canonical network node to “fall out” of the network or be incorporated into a different network. Spatial variation in networks may create the appearance that a network node is absent or disconnected when it is actually mis-localized by standardized parcellation schemes. Topographical variations may create apparent extra network nodes not typically present in most individuals. Any taxonomy must reflect the central tendency network characteristics of the general population, but also be flexible enough to accommodate connectional, spatial, and topographical variations found across individuals.” ([Uddin et al., 2023, p. 881](zotero://select/library/items/AJMLVVBY))
+
+
+
+
+
+
+Because each of these forms of interindividual variability can be present simultaneously, an open question is which of these contribute more...
+
+>Overall, spatial variation appears to contribute more to individual differences in brain networks than variations in connectivity strength (Bijsterbosch et al., 2019).
+
+However, @grattonetal_FunctionalBrainNetworks_2018 found that ..., suggesting that interindividual variability in connectivity strength does not arise entirely from differences in the anatomical distribution of networks across individuals but may reflect differences across individuals in the magnitude of connectivity within and between networks.
+
+>“Soon we came to realize that, rather than there being a single type of variation in FC that differs across individuals on a single axis, there are at least three separate, independent types of individual variation in FC networks that, unfortunately, each confound attempts to estimate the other two types of variation.” ([Gordon and Nelson, 2021, p. 80](zotero://select/library/items/8MH843XX)) ([pdf](zotero://open-pdf/library/items/6GA7FEUR?page=2&annotation=X8WUVLNL))
+
+>“We also observed that RSFC measures were highly subject-specific: session-to-session similarities were high within subject but much lower across subjects (Figure 2H). Similar findings have been reported by others as the basis for connectivity-based ‘fingerprinting’ of individuals (Anderson et al., 2011; Finn et al., 2015; Miranda-Dominguez et al., 2014; Pannunzi et al., 2017; Xu et al., 2016). However, the ability to distinguish subjects may at least in part be explained by differences in the spatial locations of brain networks across individuals (Gordon et al., 2017a; Laumann et al., 2015; Satterthwaite and Davatzikos, 2015). Additionally, systematic differences in other unconstrained biological (e.g., brain size, gyral folding patterns) or non-biological factors (e.g., data quality) may contribute to subject discrimination.” ([Gordon et al., 2017, p. 10](zotero://select/library/items/JM7K9R6L)) ([pdf](zotero://open-pdf/library/items/4CSMSVVH?page=10&annotation=CXQV5P2Z))
+
+<!-- Furthermore, the magnitude of these differences only slightly diminishes when using individually optimized parcels (matched at the network level) rather than group parcels, suggesting that interindividual variability in connectivity strength does not arise entirely from differences in the anatomical distribution of networks across individuals but may reflect differences across individuals in the magnitude of connectivity within and between networks.
+
+>"Furthermore, examining the similarity of networks composed of individually optimized, rather than group, parcels (matched at the network level) only slightly diminishes individual effects in favor of group similarity (Figure S7). This observation suggests that individual effects do not arise entirely from differences in the anatomical distribution of networks across individuals but may reflect differences across individuals in the magnitude of connectivity within and between networks. Future work adopting hyper-alignment (Guntupalli et al., 2016; Guntupalli and Haxby, 2017) or related techniques may help to clarify the contribution of individual differences in spatial mapping from differences in connectivity magnitude." @finnetal_FunctionalConnectomeFingerprinting_2015
+-->
 
 <!-- First, we assumed that five minute recordings would be sufficient to get stable functional connectivity estimates with EEG given that (1) the longer scanning times needed to reliably detect network variants with fMRI is considered a consequence of its infraslow sampling rate [@seitzmanetal_TraitlikeVariantsHuman_2019], rather than a consequence of the timeframe of the neural processes we are interested in; and (2) EEG samples a substantially larger number of data points than fMRI in a much shorter timeframe. Additionally, we assumed that the connectivity structure in each frequency band was stationary over the length of the recording for both phase and amplitude coupling functional connectomes. Although neural oscillations are naturally non-stationary, varying from moment to moment [@faisaletal_NoiseNervousSystem_2008], stationary patterns of functional connectivity during resting state have been identified in EEG [e.g., @olguin-rodriguezetal_CharacteristicFluctuationsStable_2018], fMRI [e.g., @laumannetal_StabilityBOLDFMRI_2017], and simultaneous EEG-fMRI studies [e.g., @danielarzate-menaetal_StationaryEEGPattern_2022], with consistent positive or negative coupling occurring between sites or electrodes, even when averaging over multiple epochs. These stationary patterns are thought to be the substrate for effective brain function, permitting the adaptability and efficiency needed to optimize responses to our often unpredictable environment [@garrettetal_MomenttomomentBrainSignal_2013], and thus reflect neuropsychologically relevant signals of interest. However, we do note that approaches accounting for nonlinear dynamics may provide complimentary insights to those that focus on the stable aspects of network variants [e.g., @vandevilleetal_WhenMakesYou_2021]. -->
 
@@ -92,6 +128,6 @@ In this study, we explored the feasibility of using EEG to study network variant
 
 <!-- Footnotes start --------------------------------------------------------->
 
-[^3]: EEG biometrics research has demonstrated that resting state (eyes open and closed) functional connectomes from the same individual can be accurately matched when comparing a given individual's connectome against all other connectomes in small samples [up to and around 100 participants\; e.g., @laroccaetal_HumanBrainDistinctiveness_2014]. However, although findings like this do suggest that EEG functional connectomes are more similar within than between individuals---to a degree that allows for accurate matching---they do not address the magnitude of these individual differences. Thus, future work may find that EEG has sufficient spatial resolution for biometrics (where the size of individual differences do not matter, so long as they are consistent), but insufficient spatial resolution for studying network variants (where the size of individual differences are a focal interest).
+[^7]: EEG biometrics research has demonstrated that resting state (eyes open and closed) functional connectomes from the same individual can be accurately matched when comparing a given individual's connectome against all other connectomes in small samples [up to and around 100 participants\; e.g., @laroccaetal_HumanBrainDistinctiveness_2014]. However, although findings like this do suggest that EEG functional connectomes are more similar within than between individuals---to a degree that allows for accurate matching---they do not address the magnitude of these individual differences. Thus, future work may find that EEG has sufficient spatial resolution for biometrics (where the size of individual differences do not matter, so long as they are consistent), but insufficient spatial resolution for studying network variants (where the size of individual differences are a focal interest).
 
 <!-- Footnotes end ----------------------------------------------------------->
